# bogdan2

./: .clang-format  .gitignore  .gitmodules  README.md  bogdan2.sh  build_firmware.sh  calibrate.py  calibration.py  deploy_to_pico.sh  deps.sh  pyproject.toml
analog/: analog.ino  sketch.yaml
analog/grids/: example.json
cli/: __init__.py  profiler.py
data/: heatmap_plot.py  pico_save_csv_grid.py
data/save/: timebased.py  trigger_enabled.py
docs/: installing_dependencies.md  issues_we_encountered.md
experiment_data/experiment_2026-06-09_13-14-45/: beam_profile_summary.csv  pulse_summary.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0001_x_-5_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0002_x_-4_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0003_x_-3_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0004_x_-2_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0005_x_-1_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0006_x_0_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0007_x_1_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0008_x_2_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0009_x_3_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0010_x_4_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0011_x_5_y_-5/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0012_x_-5_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0013_x_-4_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0014_x_-3_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0015_x_-2_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0016_x_-1_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0017_x_0_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0018_x_1_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0019_x_2_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0020_x_3_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0021_x_4_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-14-45/point_0022_x_5_y_-4/: pulse_001.csv  pulse_002.csv  pulse_003.csv
experiment_data/experiment_2026-06-09_13-22-29/: beam_profile_summary.csv  pulse_summary.csv
firmware/: CMakeLists.txt  CMakePresets.json  axis.c  axis.h  config.c  config.h  main.c  path.c  path.h
firmware/app/: CMakeLists.txt
firmware/app/include/app/: axis.h  controller.h  instruction.h  path.h  profiler.h  pulse_counter.h  pulse_receiver.h  pulse_tracker.h  serial.h
firmware/app/src/: axis.c  controller.c  instruction.c  main.c  main1.c  path.c  profiler.c  pulse_counter.c  pulse_receiver.c  pulse_tracker.c  serial.c
firmware/board/indio/: CMakeLists.txt
firmware/board/indio/include/board/indio/: analog_input.h  analog_output.h  digital.h  io_cfg.h
firmware/board/indio/src/: analog_input.c  analog_output.c  digital.c  io_cfg.c
firmware/cmake/: toolchain_arm_none_eabi.cmake
firmware/cmake/mcu/: samd21g18a.cmake
firmware/cmake/options/: features.cmake  warnings.cmake
firmware/config/: CMakeLists.txt  tusb_config.h
firmware/drivers/: CMakeLists.txt
firmware/drivers/include/drivers/: mcp3424.h  mcp342x.h  mcp4726.h  pca9555.h
firmware/drivers/src/: mcp3424.c  mcp342x.c  mcp4726.c  pca9555.c
firmware/include/: axis.h  config.h  controller.h  path.h  pulse_counter.h
firmware/platform/samd21g18a/: CMakeLists.txt  controller.c  controller.h  controller_analog.c  controller_analog.cpp  controller_analog.h  controller_capture_trigger_config.c  controller_capture_trigger_config.h  controller_capture_trigger_irq.c  controller_digital.cpp  controller_digital.h  controller_trigout.c  controller_trigout_irq.c  startup_samd21g18a.c  system_samd21g18a.c
firmware/platform/samd21g18a/include/platform/samd21g18a/: adc.h  assert.h  controller_analog.h  controller_digital.h  dac.h  digital.h  eic.h  i2c.h  pin.h  time.h  usb.h  utils.h
firmware/platform/samd21g18a/linker/: samd21g18a_bootloader_0x4000.ld
firmware/platform/samd21g18a/src/: adc.c  assert.c  controller.c  controller_analog.c  controller_capture_trigger_config.c  dac.c  digital.c  eic.c  i2c.c  pin.c  startup.c  startup_samd21g18a.c  system.c  system_samd21g18a.c  time.c  usb.c  utils.c
firmware/src/: axis.c  config.c  controller.c  path.c  pulse_counter.c
firmware/usb/: CMakeLists.txt
firmware/usb/include/: tusb_config.h
firmware/usb/src/: descriptors.c
host/: config.py  pdxc2.py  profiler.py  send_json.py
host/cli/: __init__.py  profiler.py
host/pdxc2/: __init__.py  config.py  constants.py  controller.py
host/pico/: __init__.py  channel.py  config.py  constants.py  scope.py
host/utils/: __init__.py  instruction.py
instructions/: continuous_example.json  example.json  point_count_example.json  point_time_example.json
pico/: beam_point.py  block_mode.py  no_trigger_acquisition.py  pico_config.py  setup.py  timing.py  trigger.py
pico/save/: csv_helpers.py  timebased.py  trigger_enabled.py
scripts/: .bashrc  build_firmware.sh  deps.sh  firmware.sh  setup.sh
(+660 files in other folders)
